# led_matrix_framework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run_tests.sh
.github/workflows/: docs.yml  unit_tests.yml
lib/: CMakeLists.txt  led_matrix_api.c  led_matrix_api.h
test/: CMakeLists.txt  mocks.c  test_bitmap.c  test_bitmap_unit.c  test_brightness.c  test_close_unit.c  test_column_grayscale.c  test_init_unit.c  test_pattern.c  test_read_unit.c  test_send_cmd_unit.c  test_sleep_wake.c  test_version_display.c
